--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -1,6 +1,6 @@
 <div class="content container" ng-cloak>
 	<div ng-controller="userProfileCtrl">
-		<h1>{{user.userProfile.name}}'s User Profile</h1>
+		<h1>{{user.profile.name}}'s User Profile</h1>
 		<sil-notices></sil-notices>
 		<form ng-submit="updateUser()">
 		<fieldset>
@@ -8,20 +8,20 @@
 			<div ng-show="notify.message" class="notification informationMessage">{{notify.message}}</div>
 			<tabset>
 				<tab heading="My Account">
-					<label>Username: <b style="margin-left:10px">{{user.userProfile.username}}</b></label>
+					<label>Username: <b style="margin-left:10px">{{user.profile.username}}</b></label>
 					<label>Picture</label>
-					<div style="margin-bottom:10px"><img class="img-polaroid" width="100px" height="100px" ng-src="{{user.userProfile.avatar_ref}}" title="Use the dropdown selections below to change your avatar's color and shape" /></div>
-					<div><select ng-model="user.userProfile.avatar_color" ng-options="c.value as c.label for c in dropdown.avatarColors" /><option value="">Select a Color...</option></select></div>
-					<div><select ng-model="user.userProfile.avatar_shape" ng-options="s.value as s.label for s in dropdown.avatarShapes" /><option value="">Choose an animal...</option></select></div>
+					<div style="margin-bottom:10px"><img class="img-polaroid" width="100px" height="100px" ng-src="{{user.profile.avatar_ref}}" title="Use the dropdown selections below to change your avatar's color and shape" /></div>
+					<div><select ng-model="user.profile.avatar_color" ng-options="c.value as c.label for c in dropdown.avatarColors" /><option value="">Select a Color...</option></select></div>
+					<div><select ng-model="user.profile.avatar_shape" ng-options="s.value as s.label for s in dropdown.avatarShapes" /><option value="">Choose an animal...</option></select></div>
 					<label>Email Address</label>
-					<input type="text" placeholder="(email)" ng-model="user.userProfile.email"/>
+					<input type="text" placeholder="(email)" ng-model="user.profile.email"/>
 					<label>Jamaica Mobile Phone Number</label>
-					<input type="text" placeholder="###-####" ng-model="user.userProfile.mobile_phone"/>
+					<input type="text" placeholder="###-####" ng-model="user.profile.mobile_phone"/>
 					<label>I preferred to be contacted via</label>
 					<div class="btn-group">
-						<button type="button" class="btn" ng-model="user.userProfile.communicate_via" btn-radio="'email'">Email</button>
-						<button type="button" class="btn" ng-model="user.userProfile.communicate_via" btn-radio="'sms'">SMS</button>
-						<button type="button" class="btn" ng-model="user.userProfile.communicate_via" btn-radio="'both'">Both</button>
+						<button type="button" class="btn" ng-model="user.profile.communicate_via" btn-radio="'email'">Email</button>
+						<button type="button" class="btn" ng-model="user.profile.communicate_via" btn-radio="'sms'">SMS</button>
+						<button type="button" class="btn" ng-model="user.profile.communicate_via" btn-radio="'both'">Both</button>
 					</div>
 					
 					<label style="margin-top:20px"><a href="/app/changepassword">Change Password</a></label>
@@ -29,31 +29,41 @@
 				<tab heading="About Me">
 					<h5>Tell us about yourself...</h5>
 					<label>Full Name</label>
-					<input type="text" placeholder="(full name)" ng-model="user.userProfile.name"/>
+					<input type="text" placeholder="(full name)" ng-model="user.profile.name"/>
 					<label>Age</label>
-					<input type="text" placeholder="(age)" ng-model="user.userProfile.age"/>
+					<input type="text" placeholder="(age)" ng-model="user.profile.age"/>
 					<label>Gender</label>
-					<select ng-model="user.userProfile.gender">
+					<select ng-model="user.profile.gender">
 						<option>Male</option>
 						<option>Female</option>
 					</select>
 				</tab>
-				<tab ng-repeat="project in user.userProfile.projects" heading="{{project.name}}">
-					<label>{{project.userProperties.userProfilePickLists['city'].name}}</label>
-					<select ng-class="" ng-model="project.userProperties.userProfilePickLists['city'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['city'].items" placeholder="yadayda"></select>
-					<label>{{project.userProperties.userProfilePickLists['preferredBibleVersion'].name}}</label>
-					<select ng-model="project.userProperties.userProfilePickLists['preferredBibleVersion'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['preferredBibleVersion'].items"><option value="unspecified"></option></select>
-					<label>{{project.userProperties.userProfilePickLists['religiousAffliation'].name}}</label>
-					<select ng-model="project.userProperties.userProfilePickLists['religiousAffliation'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['religiousAffliation'].items"><option value="unspecified"></option></select>
-					<label>{{project.userProperties.userProfilePickLists['studyGroup'].name}}</label>
-					<select ng-model="project.userProperties.userProfilePickLists['studyGroup'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['studyGroup'].items"><option value="unspecified"></option></select>
-					<label>{{project.userProperties.userProfilePickLists['feedbackGroup'].name}}</label>
-					<select ng-model="project.userProperties.userProfilePickLists['feedbackGroup'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['feedbackGroup'].items"><option value="unspecified"></option></select>
+				<tab ng-repeat="project in user.profile.projects" heading="{{project.name}}">
+					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('city') >= 0">
+						<label>{{project.userProperties.userProfilePickLists['city'].name}}</label>
+						<select ng-class="" ng-model="project.userProperties.userProfilePickLists['city'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['city'].items"></select>
+					</div>
+					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('preferredBibleVersion') >= 0">
+						<label>{{project.userProperties.userProfilePickLists['preferredBibleVersion'].name}}</label>
+						<select ng-model="project.userProperties.userProfilePickLists['preferredBibleVersion'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['preferredBibleVersion'].items"></select>
+					</div>
+					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('religiousAffliation') >= 0">
+						<label>{{project.userProperties.userProfilePickLists['religiousAffliation'].name}}</label>
+						<select ng-model="project.userProperties.userProfilePickLists['religiousAffliation'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['religiousAffliation'].items"></select>
+					</div>
+					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('studyGroup') >= 0">
+						<label>{{project.userProperties.userProfilePickLists['studyGroup'].name}}</label>
+						<select ng-model="project.userProperties.userProfilePickLists['studyGroup'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['studyGroup'].items"></select>
+					</div>
+					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('feedbackGroup') >= 0">
+						<label>{{project.userProperties.userProfilePickLists['feedbackGroup'].name}}</label>
+						<select ng-model="project.userProperties.userProfilePickLists['feedbackGroup'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['feedbackGroup'].items"></select>
+					</div>
 				</tab>
 			</tabset>
 			<button style="margin-top:20px" type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 			<div style="margin-top:20px" class="well">
-				<label>Last Login:  {{user.userProfile.last_login * 1000 | date:shortDate}}</label>
+				<label>Last Login:  {{user.profile.last_login * 1000 | date:shortDate}}</label>
 			</div>
 		</fieldset>
 		</form>
