--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -1,27 +1,27 @@
-<div class="content container" ng-cloak>
-	<div ng-controller="userProfileCtrl">
+<div class="content container" data-ng-cloak>
+	<div data-ng-controller="userProfileCtrl">
 		<h1>{{user.profile.name}}'s User Profile</h1>
 		<sil-notices></sil-notices>
-		<form ng-submit="updateUser()">
+		<form data-ng-submit="updateUser()">
 		<fieldset>
-			<div ng-show="notify.error" class="notification errorMessage">Error: {{notify.error}}</div>
-			<div ng-show="notify.message" class="notification informationMessage">{{notify.message}}</div>
+			<div data-ng-show="notify.error" class="notification errorMessage">Error: {{notify.error}}</div>
+			<div data-ng-show="notify.message" class="notification informationMessage">{{notify.message}}</div>
 			<tabset>
 				<tab heading="My Account">
 					<label>Username: <b style="margin-left:10px">{{user.profile.username}}</b></label>
 					<label>Picture</label>
-					<div style="margin-bottom:10px"><img class="img-polaroid" width="100px" height="100px" ng-src="{{user.profile.avatar_ref}}" title="Use the dropdown selections below to change your avatar's color and shape" /></div>
-					<div><select ng-model="user.profile.avatar_color" ng-options="c.value as c.label for c in dropdown.avatarColors" /><option value="">Select a Color...</option></select></div>
-					<div><select ng-model="user.profile.avatar_shape" ng-options="s.value as s.label for s in dropdown.avatarShapes" /><option value="">Choose an animal...</option></select></div>
+					<div style="margin-bottom:10px"><img class="img-polaroid" width="100px" height="100px" data-ng-src="{{user.profile.avatar_ref}}" title="Use the dropdown selections below to change your avatar's color and shape" /></div>
+					<div><select data-ng-model="user.profile.avatar_color" data-ng-options="c.value as c.label for c in dropdown.avatarColors" /><option value="">Select a Color...</option></select></div>
+					<div><select data-ng-model="user.profile.avatar_shape" data-ng-options="s.value as s.label for s in dropdown.avatarShapes" /><option value="">Choose an animal...</option></select></div>
 					<label>Email Address</label>
-					<input type="text" placeholder="(email)" ng-model="user.profile.email"/>
+					<input type="text" placeholder="(email)" data-ng-model="user.profile.email"/>
 					<label>Jamaica Mobile Phone Number</label>
-					<input type="text" placeholder="###-####" ng-model="user.profile.mobile_phone"/>
+					<input type="text" placeholder="###-####" data-ng-model="user.profile.mobile_phone"/>
 					<label>I preferred to be contacted via</label>
 					<div class="btn-group">
-						<button type="button" class="btn" ng-model="user.profile.communicate_via" btn-radio="'email'">Email</button>
-						<button type="button" class="btn" ng-model="user.profile.communicate_via" btn-radio="'sms'">SMS</button>
-						<button type="button" class="btn" ng-model="user.profile.communicate_via" btn-radio="'both'">Both</button>
+						<button type="button" class="btn" data-ng-model="user.profile.communicate_via" btn-radio="'email'">Email</button>
+						<button type="button" class="btn" data-ng-model="user.profile.communicate_via" btn-radio="'sms'">SMS</button>
+						<button type="button" class="btn" data-ng-model="user.profile.communicate_via" btn-radio="'both'">Both</button>
 					</div>
 					
 					<label style="margin-top:20px"><a href="/app/changepassword">Change Password</a></label>
@@ -29,35 +29,35 @@
 				<tab heading="About Me">
 					<h5>Tell us about yourself...</h5>
 					<label>Full Name</label>
-					<input type="text" placeholder="(full name)" ng-model="user.profile.name"/>
+					<input type="text" placeholder="(full name)" data-ng-model="user.profile.name"/>
 					<label>Age</label>
-					<input type="text" placeholder="(age)" ng-model="user.profile.age"/>
+					<input type="text" placeholder="(age)" data-ng-model="user.profile.age"/>
 					<label>Gender</label>
-					<select ng-model="user.profile.gender">
+					<select data-ng-model="user.profile.gender">
 						<option>Male</option>
 						<option>Female</option>
 					</select>
 				</tab>
-				<tab ng-repeat="project in user.profile.projects" heading="{{project.name}}">
-					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('city') >= 0">
+				<tab data-ng-repeat="project in user.profile.projects" heading="{{project.name}}">
+					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('city') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['city'].name}}</label>
-						<select ng-class="" ng-model="project.userProperties.userProfilePickLists['city'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['city'].items"></select>
+						<select data-ng-class="" data-ng-model="project.userProperties.userProfilePickLists['city'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['city'].items"></select>
 					</div>
-					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('preferredBibleVersion') >= 0">
+					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('preferredBibleVersion') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['preferredBibleVersion'].name}}</label>
-						<select ng-model="project.userProperties.userProfilePickLists['preferredBibleVersion'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['preferredBibleVersion'].items"></select>
+						<select data-ng-model="project.userProperties.userProfilePickLists['preferredBibleVersion'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['preferredBibleVersion'].items"></select>
 					</div>
-					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('religiousAffliation') >= 0">
+					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('religiousAffliation') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['religiousAffliation'].name}}</label>
-						<select ng-model="project.userProperties.userProfilePickLists['religiousAffliation'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['religiousAffliation'].items"></select>
+						<select data-ng-model="project.userProperties.userProfilePickLists['religiousAffliation'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['religiousAffliation'].items"></select>
 					</div>
-					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('studyGroup') >= 0">
+					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('studyGroup') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['studyGroup'].name}}</label>
-						<select ng-model="project.userProperties.userProfilePickLists['studyGroup'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['studyGroup'].items"></select>
+						<select data-ng-model="project.userProperties.userProfilePickLists['studyGroup'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['studyGroup'].items"></select>
 					</div>
-					<div ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('feedbackGroup') >= 0">
+					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('feedbackGroup') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['feedbackGroup'].name}}</label>
-						<select ng-model="project.userProperties.userProfilePickLists['feedbackGroup'].defaultKey" ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['feedbackGroup'].items"></select>
+						<select data-ng-model="project.userProperties.userProfilePickLists['feedbackGroup'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['feedbackGroup'].items"></select>
 					</div>
 				</tab>
 			</tabset>
