--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -1,6 +1,6 @@
 <div class="content container" data-ng-cloak>
 	<div data-ng-controller="userProfileCtrl">
-		<h1>{{user.profile.name}}'s User Profile</h1>
+		<h1>{{user.name}}'s User Profile</h1>
 		<sil-notices></sil-notices>
 		<form data-ng-submit="updateUser()">
 		<fieldset>
@@ -8,20 +8,20 @@
 			<div data-ng-show="notify.message" class="notification informationMessage">{{notify.message}}</div>
 			<tabset>
 				<tab heading="My Account">
-					<label>Username: <b style="margin-left:10px">{{user.profile.username}}</b></label>
+					<label>Username: <b style="margin-left:10px">{{user.username}}</b></label>
 					<label>Picture</label>
-					<div style="margin-bottom:10px"><img class="img-polaroid" width="100px" height="100px" data-ng-src="{{user.profile.avatar_ref}}" title="Use the dropdown selections below to change your avatar's color and shape" /></div>
-					<div><select data-ng-model="user.profile.avatar_color" data-ng-options="c.value as c.label for c in dropdown.avatarColors" /><option value="">Select a Color...</option></select></div>
-					<div><select data-ng-model="user.profile.avatar_shape" data-ng-options="s.value as s.label for s in dropdown.avatarShapes" /><option value="">Choose an animal...</option></select></div>
+					<div style="margin-bottom:10px"><img class="img-polaroid" width="100px" height="100px" data-ng-src="{{user.avatar_ref}}" title="Use the dropdown selections below to change your avatar's color and shape" /></div>
+					<div><select data-ng-model="user.avatar_color" data-ng-options="c.value as c.label for c in dropdown.avatarColors"><option value="">Select a Color...</option></select></div>
+					<div><select data-ng-model="user.avatar_shape" data-ng-options="s.value as s.label for s in dropdown.avatarShapes"><option value="">Choose an animal...</option></select></div>
 					<label>Email Address</label>
-					<input type="text" placeholder="(email)" data-ng-model="user.profile.email"/>
+					<input type="text" placeholder="(email)" data-ng-model="user.email"/>
 					<label>Jamaica Mobile Phone Number</label>
-					<input type="text" placeholder="###-####" data-ng-model="user.profile.mobile_phone"/>
+					<input type="text" placeholder="###-####" data-ng-model="user.mobile_phone"/>
 					<label>I preferred to be contacted via</label>
 					<div class="btn-group">
-						<button type="button" class="btn" data-ng-model="user.profile.communicate_via" btn-radio="'email'">Email</button>
-						<button type="button" class="btn" data-ng-model="user.profile.communicate_via" btn-radio="'sms'">SMS</button>
-						<button type="button" class="btn" data-ng-model="user.profile.communicate_via" btn-radio="'both'">Both</button>
+						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'email'">Email</button>
+						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'sms'">SMS</button>
+						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'both'">Both</button>
 					</div>
 					
 					<label style="margin-top:20px"><a href="/app/changepassword">Change Password</a></label>
@@ -29,16 +29,16 @@
 				<tab heading="About Me">
 					<h5>Tell us about yourself...</h5>
 					<label>Full Name</label>
-					<input type="text" placeholder="(full name)" data-ng-model="user.profile.name"/>
+					<input type="text" placeholder="(full name)" data-ng-model="user.name"/>
 					<label>Age</label>
-					<input type="text" placeholder="(age)" data-ng-model="user.profile.age"/>
+					<input type="text" placeholder="(age)" data-ng-model="user.age"/>
 					<label>Gender</label>
-					<select data-ng-model="user.profile.gender">
+					<select data-ng-model="user.gender">
 						<option>Male</option>
 						<option>Female</option>
 					</select>
 				</tab>
-				<tab data-ng-repeat="project in user.profile.projects" heading="{{project.name}}">
+				<tab data-ng-repeat="project in user.projects" heading="{{project.name}}">
 					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('city') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['city'].name}}</label>
 						<select data-ng-class="" data-ng-model="project.userProperties.userProfilePickLists['city'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['city'].items"></select>
@@ -63,7 +63,7 @@
 			</tabset>
 			<button style="margin-top:20px" type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 			<div style="margin-top:20px" class="well">
-				<label>Last Login:  {{user.profile.last_login * 1000 | date:shortDate}}</label>
+				<label>Last Login:  {{user.last_login * 1000 | date:shortDate}}</label>
 			</div>
 		</fieldset>
 		</form>
