--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -38,7 +38,7 @@
 						<option>Female</option>
 					</select>
 				</tab>
-				<tab data-ng-repeat="project in user.projects" heading="{{project.name}}">
+				<tab data-ng-repeat="project in projectsSettings" heading="{{project.name}}">
 					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('city') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['city'].name}}</label>
 						<select data-ng-class="" data-ng-model="project.userProperties.userProfilePickLists['city'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['city'].items"></select>
@@ -47,9 +47,9 @@
 						<label>{{project.userProperties.userProfilePickLists['preferredBibleVersion'].name}}</label>
 						<select data-ng-model="project.userProperties.userProfilePickLists['preferredBibleVersion'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['preferredBibleVersion'].items"></select>
 					</div>
-					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('religiousAffliation') >= 0">
-						<label>{{project.userProperties.userProfilePickLists['religiousAffliation'].name}}</label>
-						<select data-ng-model="project.userProperties.userProfilePickLists['religiousAffliation'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['religiousAffliation'].items"></select>
+					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('religiousAffiliation') >= 0">
+						<label>{{project.userProperties.userProfilePickLists['religiousAffiliation'].name}}</label>
+						<select data-ng-model="project.userProperties.userProfilePickLists['religiousAffiliation'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['religiousAffiliation'].items"></select>
 					</div>
 					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('studyGroup') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['studyGroup'].name}}</label>
