--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -38,7 +38,7 @@
 						<option>Female</option>
 					</select>
 				</tab>
-				<tab data-ng-repeat="project in projectsSettings" heading="{{project.name}}">
+				<tab data-ng-repeat="project in projectsSettings" heading="{{project.name}}" disabled="project.userProperties.userProfilePropertiesEnabled.length == 0">
 					<div data-ng-show="project.userProperties.userProfilePropertiesEnabled.indexOf('city') >= 0">
 						<label>{{project.userProperties.userProfilePickLists['city'].name}}</label>
 						<select data-ng-class="" data-ng-model="project.userProperties.userProfilePickLists['city'].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists['city'].items"></select>
