--- a/src/angular-app/signup/ng-app.html
+++ b/src/angular-app/signup/ng-app.html
@@ -1,7 +1,8 @@
-<div class="content container" ng-cloak>
+<div ng-controller="UserCtrl" class="content container" ng-cloak>
+    <div ng-hide="submissionComplete">
 		<h1>Create an Account</h1>
 		<sil-notices></sil-notices>
-		<div ng-controller="UserCtrl" class="span4">
+		<div class="span4">
 			<form ng-disabled="userRegistered" ng-submit="createUser(record)" id="userForm">
 				<fieldset>
 					<legend>Sign Up Below</legend>
@@ -33,11 +34,28 @@
 							<input required type="text" ng-model="record.captcha" name="captcha" />
 						</div>
 					<button id="submit" class="btn btn-primary" type="submit"
-						ng-disabled="userNameExists || userForm.$invalid">
+						ng-disabled="userNameExists || userForm.$invalid || submissionInProgress">
 						Sign Up <i style="margin-left: 5px" class="icon-thumbs-up"></i>
 					</button>
+					<span ng-show="submissionInProgress"><img src="/images/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
 					</div>
 				</fieldset>
 			</form>
 		</div>
+    </div>
+    <div class="row span9" style="font-size:16px" ng-show="submissionComplete">
+		<h1>You're Almost There...</h1>
+        <div class="row">
+            <div class="span2"><i style="font-size:100px; color: green" class="icon-check-sign"></i></div>
+            <div class="span7"><h2>Register</h2><div>Great!  You're already registered!</div></div>
+        </div>
+        <div class="row">
+            <div class="span2"><i style="font-size:110px;" class="icon-check-empty"></i></div>
+            <div class="span7"><h2>Check Your Email Now</h2><div>Click the validation link in the email we just sent you to validate your account.  Don't see it yet?  Be patient, and also check your SPAM folder just in case.</div></div>
+        </div>
+        <div class="row">
+            <div class="span2"><i style="font-size:110px;" class="icon-check-empty"></i></div>
+            <div class="span7"><h2>Login and Get Started</h2><div>After completing the steps above, <a href="/login">login</a> and get started working on your project.</div></div>
+        </div>
+    </div>
 </div>
