--- a/src/angular-app/account/public/registration/ng-app.html
+++ b/src/angular-app/account/public/registration/ng-app.html
@@ -2,7 +2,7 @@
 	<h1>Thanks for joining</h1>
 	<sil-notices></sil-notices>
 	<div class="well" ng-hide="showForm || errorState">
-		<img id="userNameLoading" src="/images/loading-small.gif" /> Loading...
+		<img id="userNameLoading" src="/images/shared/loading-small.gif" /> Loading...
 	</div>
 	<div ng-show="showForm">
 	<div class="row">
@@ -16,9 +16,9 @@
 				<input required type="text"
 					placeholder="pick a user name" ng-model="record.username"
 					name="username" id="username" ng-blur="checkUserName()" /> 
-					<span  ng-show="userNameLoading"><img id="userNameLoading" src="/images/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
-					<span  ng-show="userNameOk"><img id="userNameOk" src="/images/tick.png" title="User name is available!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
-					<span  ng-show="userNameExists"><img id="userNameExists" src="/images/exclamation.png" title="User name already exist!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
+					<span  ng-show="userNameLoading"><img id="userNameLoading" src="/images/shared/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
+					<span  ng-show="userNameOk"><img id="userNameOk" src="/images/shared/tick.png" title="User name is available!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
+					<span  ng-show="userNameExists"><img id="userNameExists" src="/images/shared/exclamation.png" title="User name already exist!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
 				<label>Name</label>
 				<input required type="text" placeholder="your real name" ng-model="record.name" />
 				<label>Password</label> <input required type="text" ng-model="record.password" name="password" />
