--- a/src/angular-app/account/public/signup/ng-app.html
+++ b/src/angular-app/account/public/signup/ng-app.html
@@ -11,9 +11,9 @@
 							<label>User Name</label> <input required type="text"
 								placeholder="pick a username" ng-model="record.username"
 								name="username" id="username" ng-blur="checkUserName()" /> 
-								<span  ng-show="userNameLoading"><img id="userNameLoading" src="/images/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
-								<span  ng-show="userNameOk"><img id="userNameOk" src="/images/tick.png" title="User name is available!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
-								<span  ng-show="userNameExists"><img id="userNameExists" src="/images/exclamation.png" title="User name already exist!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
+								<span  ng-show="userNameLoading"><img id="userNameLoading" src="/images/shared/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
+								<span  ng-show="userNameOk"><img id="userNameOk" src="/images/shared/tick.png" title="User name is available!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
+								<span  ng-show="userNameExists"><img id="userNameExists" src="/images/shared/exclamation.png" title="User name already exist!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
 						</div>
 						<div>
 							<label>Name</label> <input required type="text"
@@ -37,7 +37,7 @@
 						ng-disabled="userNameExists || userForm.$invalid || submissionInProgress">
 						Sign Up <i style="margin-left: 5px" class="icon-thumbs-up"></i>
 					</button>
-					<span ng-show="submissionInProgress"><img src="/images/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
+					<span ng-show="submissionInProgress"><img src="/images/shared/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
 					</div>
 				</fieldset>
 			</form>
