--- a/src/angular-app/scriptureforge/sfadmin/ng-app.html
+++ b/src/angular-app/scriptureforge/sfadmin/ng-app.html
@@ -43,9 +43,9 @@
 				<div>
 					<label>User Name</label>
 					<input ng-blur="checkUserName()" required type="text" placeholder="(username)" ng-model="record.username"/>
-					<span  ng-show="userNameLoading"><img id="userNameLoading" src="/images/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
-					<span  ng-show="userNameOk"><img id="userNameOk" src="/images/tick.png" title="User name is available!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
-					<span  ng-show="userNameExists"><img id="userNameExists" src="/images/exclamation.png" title="User name already exist!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
+					<span  ng-show="userNameLoading"><img id="userNameLoading" src="/images/shared/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
+					<span  ng-show="userNameOk"><img id="userNameOk" src="/images/shared/tick.png" title="User name is available!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
+					<span  ng-show="userNameExists"><img id="userNameExists" src="/images/shared/exclamation.png" title="User name already exist!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
 				</div>
 				<div>
 					<label>Name</label>
