ripped out "projects" list from sfchecks
Former-commit-id: cd002b983322e6182724d5f05ac122e6391f22be

--- a/src/angular-app/account/activity/ng-app.html
+++ b/src/angular-app/account/activity/ng-app.html
@@ -14,7 +14,7 @@
 		<button class="btn" ng-click="showInviteForm = !showInviteForm"><i class="icon-envelope"></i>Invite a Friend</button>
 		</div>
 		<ul class="topNav">
-			<li><a href="/app/sfchecks#/projects">My Projects</a></li>
+			<li><a href="/app/projects">My Projects</a></li>
 			<li class="here"><a href="/app/activity">Activity<span ng-hide="unread.length == 0" style="margin-left:10px" class="badge badge-important">{{unread.length}}</span></a></li>
 			
 		</ul>
