--- a/src/angular-app/scriptureforge/sfchecks/ng-app.html
+++ b/src/angular-app/scriptureforge/sfchecks/ng-app.html
@@ -14,7 +14,7 @@
 		<button class="btn" ng-click="showInviteForm = !showInviteForm"><i class="icon-envelope"></i>Invite a Friend</button>
 		</div>
 		<ul class="topNav">
-			<li class="here"><a href="#/projects">My Projects</a></li>
+			<li class="here"><a href="/app/projects">My Projects</a></li>
 			<li><a href="/app/activity">Activity</a></li>
 		</ul>
 		<ul id="top" class="topCrumbs" breadcrumbs></ul>
