--- a/src/angular-app/account/projects/ng-app.html
+++ b/src/angular-app/account/projects/ng-app.html
@@ -19,7 +19,7 @@
         	    <fieldset>
                	    <input type="text" data-ng-model="newProject.projectName" maxlength="50" required placeholder="Project Name"/>
                     <label class="radio" ng-repeat="type in projectTypesBySite[site()]">
-                        <input type="radio" name="projectType" data-ng-model="newproject.appName" value="projectType"> {{projectTypes[type]}} -- {{type}}
+                        <input type="radio" name="projectType" data-ng-model="newProject.appName" value="{{type}}">{{projectTypes[type]}}
                     </label>
             	<button type="submit" class="btn" data-ng-disabled="newProjectForm.$invalid" data-ng-click="addProject(); newProjectCollapsed = true"><i class="icon-ok"></i>Save</button>
         	    </fieldset>
@@ -31,7 +31,7 @@
         		<ul class="inline" data-ng-class="{active: isSelected(project)}">
         			<li data-ng-show="rights.deleteOther"><input type="checkbox" data-ng-checked="isSelected(project)" data-ng-click="updateSelection($event, project)" /></li>
         			<li style="width: 80%">
-        				<a data-ng-show="isInProject(project)" href="{{linkService.project(project.id)}}">
+        				<a data-ng-show="isInProject(project)" href="/app/{{project.appName}}#/p/{{project.id}}">
         					<span class="larger-text">{{project.projectname}} ({{projectTypes[project.appName]}})</span>
         				</a>
         				<span data-ng-show="!isInProject(project)" class="larger-text">{{project.projectname}} ({{projectTypes[project.appName]}})</span>
