WIP: Rendered dictionary definition
Added nicer styling, and option to hide rendered definition if empty.

--- a/src/angular-app/common/directive/dc-rendered.html
+++ b/src/angular-app/common/directive/dc-rendered.html
@@ -1,3 +1,5 @@
-<div class="dc-rendered">
-	<span style="font-weight: bold">{{definition.label}}</span> {{definition.rendered}}
+<div class="dc-rendered" ng-hide="hideIfEmpty && !definition.label">
+	<span class="dc-rendered word">{{definition.label}}</span>
+	<span class="dc-rendered definition">{{definition.rendered}}</span>
+	<hr />
 </div>
