--- a/src/angular-app/languageforge/lexicon/directive/dc-sense.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-sense.html
@@ -1,29 +1,31 @@
 <div class="dc-sense">
 	<div class="deleteX pull-right"><i data-ng-click="remove(index)" title="Delete '{{getSenseTitle(sense)}}'" class="icon-remove"></i></div>
-	<div data-ng-repeat="field in config.fields | orderAsArray:'fieldName'">
-		<div data-ng-if="field.visible">
-			<div data-ng-switch data-on="field.type">
+	<div data-ng-repeat="fieldName in config.fieldOrder">
+		<div data-ng-if="config.fields[fieldName].visible">
+			<div data-ng-switch data-on="config.fields[fieldName].type">
 				<div data-ng-switch-when="optionlist">
-					<dc-optionlist definition="config.fields[field.fieldName]" model="model[field.fieldName]"></dc-optionlist>
+					<dc-optionlist definition="config.fields[fieldName]" model="model[fieldName]"></dc-optionlist>
 				</div>
 				<div data-ng-switch-when="multitext">
-					<dc-multitext definition="config.fields[field.fieldName]" model="model[field.fieldName]"></dc-multitext>
+					<dc-multitext definition="config.fields[fieldName]" model="model[fieldName]"></dc-multitext>
 				</div>
 				<div data-ng-switch-when="fields">
-					<div data-ng-switch data-on="field.fieldName">
+					<pre data-ng-show="false">{{config | json}}</pre>
+					
+					<div data-ng-switch data-on="fieldName">
 						<div data-ng-switch-when="examples">
 							<div class="animate-repeat" data-ng-repeat="example in model.examples"> 
-								<dc-example remove="deleteExample" index="$index" config="config.fields[field.fieldName]" model="example"></dc-example>
+								<dc-example remove="deleteExample" index="$index" config="config.fields[fieldName]" model="example"></dc-example>
 							</div>
 							<div class="addItem"><a data-ng-click="addExample()">Add Example</a></div>
 						</div>
 						<div data-ng-switch-default>
-							unsupported config field: {{field.fieldName}}
+							unsupported config field: {{fieldName}}
 						</div>
 					</div>
 				</div>
 				<div data-ng-switch-default>
-					unsupported type {{config.fields[field.fieldName].type}} for field {{field.fieldName}}
+					unsupported type {{config.fields[fieldName].type}} for field {{fieldName}}
 				</div>
 			</div>
 		</div>
