Prepare for comments: Use {value: "foo"} in dc-*
Once the dc-comments directive is ready, the models will become:
{value: "foo", comments: [{who: "Robin", what: "Comment on foo"}]}

This commit adds the value attribute, and a later commit will add
the comments attribute.

--- a/src/angular-app/languageforge/lexicon/directive/dc-multitext.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-multitext.html
@@ -2,7 +2,7 @@
     <div data-ng-repeat="inputSystem in definition.inputSystems" class="control-group">
         <label data-ng-if="$first" class="control-label">{{definition.label}}</label>
         <div class="controls">
-            <span title="unknown" class="wsid">{{getAbbreviation(inputSystem)}}</span><input data-ng-disabled="{{definition.readonly}}" width="{{definition.width}}" type="text" data-ng-model="model[inputSystem]"/>
+            <span title="unknown" class="wsid">{{getAbbreviation(inputSystem)}}</span><input data-ng-disabled="{{definition.readonly}}" width="{{definition.width}}" type="text" data-ng-model="model[inputSystem].value"/>
         </div>
     </div>
 </form>
