WIP: Comments tab on DBE
A few features remain, but what's here already is working.

Working:
 - Gravatars by email address of comment owner
 - "Post New Comment" button
 - Comments persist in data model

Not yet implemented:
 - Score buttons change score
    + Score buttons should also record who clicked them
 - Subcomments
 - Collapsable comments section (collapse link might show "N comments")
 - Comment status can be changed (selected from dropdown)
 - "Post New Comment" field hides, only shows itself when "Reply" clicked


Former-commit-id: db297d9d080581af91373c453a2d33db83716f01

--- a/src/angular-app/languageforge/lexicon/directive/dc-multitext.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-multitext.html
@@ -4,5 +4,6 @@
         <div class="controls">
             <span title="unknown" class="wsid">{{getAbbreviation(inputSystem)}}</span><input data-ng-disabled="{{definition.readonly}}" width="{{definition.width}}" type="text" data-ng-model="model[inputSystem].value"/>
         </div>
+        <dc-comments data-ng-show="definition.commentsVisible" dc-config="definition" dc-model="model[inputSystem]"></dc-comments>
     </div>
 </form>
