--- a/src/angular-app/languageforge/lexicon/directive/dc-optionlist.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-optionlist.html
@@ -5,4 +5,5 @@
                 <option value="">Unknown</option>
             </select>
         </div>
+        <dc-comments data-ng-show="definition.commentsVisible" dc-config="definition" dc-model="model"></dc-comments>
 </form>
