optional show of web links

--- a/src/angular-app/bellows/directive/pui-language.html
+++ b/src/angular-app/bellows/directive/pui-language.html
@@ -28,7 +28,7 @@
 	</table>
 	
 	<div class="pull-right" data-ng-transclude></div>
-	<p>
+	<p data-ng-show="puiShowLinks">
 		<a href="http://www.infoterm.info/standardization/iso_639_1_2002.php" target="_blank">
 			<small><i class="icon-globe"></i> About Language 639-1 Codes</small></a>
 		<br />
