WIP: Comments tab on DBE - subcomments showing
Can't add subcomments yet, but now they're showing up properly, with
a "Reply" link for each comment that will (once implemented) show the
"add subcomment" editor.

--- a/src/angular-app/languageforge/lexicon/directive/dc-comments.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-comments.html
@@ -18,7 +18,15 @@
 					<div>{{comment.userRef.username}}</div>
 				</div>
 				<div class="comment-content">{{comment.content}}</div>
+				<div class="comment-replylink"><a href="#">Reply</a></div>
 			</div>
+			<table class="subcomments" data-ng-if="comment.subcomments.length">
+				<tr data-ng-repeat="subcomment in comment.subcomments">
+					<td class="subcomment-who">{{subcomment.userRef.username}}</td>
+					<td class="subcomment-when">{{subcomment.dateModified | date:'yyyy-MM-dd'}}</td>
+					<td class="subcomment-what">{{subcomment.content}}</td>
+				</tr>
+			</table>
 		</div>
 	</div>
 	<div class="new-comment-form">
